force-app/main/default/objects/Integration_Log__b/Integration_Log__b.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
</CustomObject>