force-app/main/default/objects/Integration_Log__b/fields/getLineNumber__c.field-meta.xml
<CustomField>
    <fullName>getLineNumber__c</fullName>
    <label>getLineNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>