force-app/main/default/objects/Integration_Log__b/fields/getMessage__c.field-meta.xml
<CustomField>
    <fullName>getMessage__c</fullName>
    <label>getMessage</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>