force-app/main/default/objects/Integration_Log__b/fields/getNumDml__c.field-meta.xml
<CustomField>
    <fullName>getNumDml__c</fullName>
    <label>getNumDml</label>
    <length>255</length>
    <type>Text</type>
</CustomField>