force-app/main/default/objects/Integration_Log__b/fields/getStackTraceString__c.field-meta.xml
<CustomField>
    <fullName>getStackTraceString__c</fullName>
    <label>getStackTraceString</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>