force-app/main/default/objects/Integration_Log__b/fields/getTypeName__c.field-meta.xml
<CustomField>
    <fullName>getTypeName__c</fullName>
    <label>getTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>