force-app/main/default/objects/Integration_Log__b/fields/log_Id__c.field-meta.xml
<CustomField>
    <fullName>log_Id__c</fullName>
    <label>log Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>